                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 09-09-2006 fixed: LED setting "no Change" can switch off the LED
 - 09-09-2006 fixed: SystemInfo, extended memunit port detection 
 - 09-09-2006 changed: LCD Contrast adjustment is not supported by Xecuter3 Modchip
 - 09-09-2006 fixed: LCD SmartXX v3 and OPX Contrast Control method was inaccurately
 - 09-09-2006 changed: ttf fonts where went through unneded charset conversions if width was larger than screen. (also flipped multiple times in hebrew case, could solve the last char jumping issue)
 - 09-09-2006 changed: force mplayer to use libavformat for decoding dvr-ms files, as it handles them better
 - 09-09-2006 fixed: comparison for mkv, avi extension where case sensitve in mplayer.
 - 09-09-2006 fixed: ts (or any files with a 2 char extension) files wouldn't play over smb.
 - 09-09-2006 updated: German language file
 - 08-09-2006 fixed: Edit XBE Title was enabled for profiles that didn't have database access.
 - 08-09-2006 fixed: Delete and Rename were sometimes active on parent folder items.
 - 08-09-2006 fixed: Added workaround for iTunes v2.4 tag bug to libid3tag to allow us to load these (incorrect) tags.
 - 08-09-2006 changed: Settings screens reordered.
 - 08-09-2006 fixed: no info scanned for this view message didn't follow animations.
 - 07-09-2006 updated: German (Austrian) language file (Thnx to CEOMR)
 - 07-09-2006 updated: Spanish language file (Thnx to jose_t)
 - 07-09-2006 updated: Norwegian language file (Thnx to vnm)
 - 07-09-2006 updated: Indonesian language file (Thnx to djoens)
 - 07-09-2006 updated: Polish language file (Thnx to napek)